--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
         "react-scripts": "5.0.0",
         "web-vitals": "^2.1.4"
     },
-    "main": "public/electron.js",
+    "main": "public/electron.ts",
     "scripts": {
         "start": "react-scripts start",
         "build": "react-scripts build",
@@ -39,9 +39,14 @@
         ]
     },
     "devDependencies": {
+        "@types/jest": "^27.4.0",
+        "@types/node": "^17.0.15",
+        "@types/react": "^17.0.39",
+        "@types/react-dom": "^17.0.11",
         "concurrently": "^7.0.0",
         "electron": "^17.0.0",
         "electron-is-dev": "^2.0.0",
+        "typescript": "^4.5.5",
         "wait-on": "^6.0.0"
     }
 }
