--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
         "react-scripts": "5.0.0",
         "web-vitals": "^2.1.4"
     },
-    "main": "public/electron.ts",
+    "main": "public/electron.js",
     "scripts": {
         "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject",
-        "dev": "concurrently -k \"BROWSER=none npm run start\" \"npm run electron\"",
+        "start:electron": "concurrently -k \"BROWSER=none npm run start\" \"npm run electron\"",
         "electron": "wait-on tcp:3000 && electron ."
     },
     "eslintConfig": {
