--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "@testing-library/user-event": "^13.5.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
+        "react-redux": "^7.2.6",
         "react-scripts": "5.0.0",
         "web-vitals": "^2.1.4"
     },
@@ -46,6 +47,7 @@
         "concurrently": "^7.0.0",
         "electron": "^17.0.0",
         "electron-is-dev": "^2.0.0",
+        "redux-devtools": "^3.7.0",
         "typescript": "^4.5.5",
         "wait-on": "^6.0.0"
     }
