--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "react-dom": "^17.0.2",
         "react-redux": "^7.2.6",
         "react-scripts": "5.0.0",
+        "redux-form": "^8.3.8",
         "web-vitals": "^2.1.4"
     },
     "main": "public/electron.js",
@@ -44,6 +45,7 @@
         "@types/node": "^17.0.15",
         "@types/react": "^17.0.39",
         "@types/react-dom": "^17.0.11",
+        "@types/redux-form": "^8.3.3",
         "concurrently": "^7.0.0",
         "electron": "^17.0.0",
         "electron-is-dev": "^2.0.0",
