--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject",
-        "start:electron": "concurrently -k \"BROWSER=none npm run start\" \"npm run electron\"",
+        "start:electron": "concurrently -k \"npm run start\" \"npm run electron\"",
         "electron": "wait-on tcp:3000 && electron ."
     },
     "eslintConfig": {
