--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,8 +20,8 @@
         "jsx": "react",
         "sourceMap": true,
         "declaration": true,
-        "noUnusedLocals": true,
-        "noUnusedParameters": true,
+        "noUnusedLocals": false,
+        "noUnusedParameters": false,
         "incremental": true,
         "noFallthroughCasesInSwitch": true
     },
